# video-illustration

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
cross_img_ICL/: appearance_transfer_model.py  config.py  run.py
cross_img_ICL/models/: unet_2d_condition.py
cross_img_ICL/utils/: adain.py  attention_utils.py  image_utils.py  latent_utils.py
notebooks/: experimental_ICL_with_cross_image_basecode.ipynb  modified_masks_cross_im_code_for_ICL.ipynb
video_illustration/: bin.py
video_illustration/cross-img-masked/: README.md  appearance_transfer_model.py  config.py  run.py
video_illustration/cross-img-masked/output/a woman/app=fangen---struct=bonn_frame_0026/: config.yaml
video_illustration/cross-img-masked/output/a woman/app=fangen---struct=bonn_frame_0026/latents/: bonn_frame_0026.pt  bonn_frame_0026_ddpm_noise.pt  fangen.pt  fangen_ddpm_noise.pt
video_illustration/cross-img-masked/utils/: image_utils.py  latent_utils.py
video_illustration/cross_img_ICL/: README.md  appearance_transfer_model.py  config.py  constants.py
video_illustration/cross_img_ICL/models/: stable_diffusion.py
video_illustration/cross_img_ICL/utils/: segmentation.py  video_utils.py
video_illustration/old_code_icl/: README.md  attention_icl_utils.py  diffusion_for_icl.py  predict_ICL.py
